--- a/app.css
+++ b/app.css
@@ -7,7 +7,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background: url('./IMG/hush-naidoo-jade-photogrhd.jpg') no-repeat center center/cover;
+    background: url('./IMG/imagen\ de\ portada.jpg') no-repeat center center/cover;
     height: 120vh;
     color: #2471A3;
     display: flex;
@@ -267,3 +267,9 @@ footer {
 .social-icon img:hover {
     transform: scale(1.1);
 }
+
+
+
+
+
+
