--- a/css/app.css
+++ b/css/app.css
@@ -39,13 +39,13 @@ body {
 .hero-content {
     position: relative;
     z-index: 2;
-    max-width: 48vw;
+    max-width: 50vw;
     /* width: 95%; */
     /* border: 1px black solid; */
 }
 
 .hero-content h1 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     margin: 0;
     color: #ffffff;
     text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
@@ -56,7 +56,7 @@ body {
 }
 
 .hero-content p {
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     margin: 20px 0;
     color: #f8f9fa;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
@@ -193,7 +193,7 @@ body {
     display: flex;
     justify-content: space-around;
     background-color: #0366d6;
-    padding: 10px;
+    /* padding: 5px; */
 }
 
 .nav-item {
@@ -203,10 +203,10 @@ body {
 .nav-button {
     background: none;
     color: white;
-    font-size: 24px;
+    font-size: 20px;
     border: none;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 5px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
