--- a/css/mision.css
+++ b/css/mision.css
@@ -5,11 +5,10 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
-    background: url('../images/imagen de portada.jpg') no-repeat center center/cover;
 }
 
 /* Hero Section */
-.hero-section {
+.mision {
     height: 60vh;
     display: flex;
     justify-content: center;
@@ -17,10 +16,11 @@ body {
     text-align: center;
     position: relative;
     color: white;
+    background: url('../images/imagen de portada.jpg') no-repeat center center/cover;
     /* border: black solid 3px; */
 }
 
-.hero-section::before {
+.mision::before {
     content: '';
     position: absolute;
     top: 0;
@@ -31,20 +31,20 @@ body {
     z-index: 1;
 }
 
-.hero-content {
+.mision-content {
     position: relative;
     z-index: 2;
     max-width: 800px;
 }
 
-.hero-content h1 {
+.mision-content h1 {
     font-size: 3rem;
     margin: 0;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
 
-.hero-content p {
-    font-size: 1.2rem;
+.mision-content p {
+    font-size: 1.5rem;
     margin-top: 10px;
 }
 
