--- a/css/equipo.css
+++ b/css/equipo.css
@@ -107,7 +107,7 @@
     text-decoration: none;
     font-weight: bold;
     border-radius: 25px;
-    transition: background 0.3s ease, transform 0.3s ease;
+    transition: 0.3s ease, transform 0.3s ease;
 }
 
 .btn-home:hover {
